--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,22 @@
 @import './base.css';
+h1 {
+  display: flex;
+  justify-content: center;
+}
 
-
-
+a {
+  text-decoration: none;
+}
+#create-button {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+}
+#go-back {
+  position: fixed;
+  top: 30px;
+  left: 30px;
+}
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -10,9 +25,7 @@
 }
 
 @media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+
 }
 
 @media (min-width: 1024px) {
