--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -60,6 +60,7 @@
 }
 
 body {
+  padding-bottom: env(safe-area-inset-bottom);
   min-height: 100vh;
   color: var(--color-text);
   background: #212529;
